# django-crud

./: .gitignore  db.sqlite3  pyproject.toml
.vim/: coc-settings.json
djandocrud/: asgi.py  settings.py  urls.py  wsgi.py
tasks/: admin.py  models.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/: base.html  create_task.html  home.html  signin.html  signup.html  task_detail.html  tasks.html
