[tool.poetry]
name = "django-crud"
version = "0.1.0"
description = "Crud con Django"
authors = ["Juan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pylint = "^3.1.0"
bandit = "^1.7.8"
autopep8 = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
